--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -1959,3 +1959,281 @@ leaflet(sf::st_transform(md, 4326)) %>%
 ]
 
 
+---
+## Unemployment Map
+
+[Local Area Unemployment Statistics page](https://www.bls.gov/lau/)
+from the Bureau of Labor Statistics makes available county-level
+monthly unemployment data for a 14-month window.
+
+--
+
+The file for February 2020 through March 2021 is available is
+available at
+<http://www.stat.uiowa.edu/~luke/data/laus/laucntycur14-2020.txt> and
+in the project data folder.
+
+--
+
+This file is a text file but uses a non-standard separator.
+
+--
+
+It is designed for human readability and uses
+a comma as a _thousands separator_ or _grouping mark_.
+
+--
+
+It also includes header and footer information.
+
+--
+
+It is still reasonably easy to read in.
+
+---
+## Unemployment Map
+
+One way to read the data into R is:
+
+```{r}
+lausURL <- "../data/laucntycur14-2020.txt"
+lausUS <- read.table(lausURL,
+                     col.names = c("LAUSAreaCode", "State", "County",
+                                   "Title", "Period",
+                                   "LaborForce", "Employed",
+                                   "Unemployed", "UnempRate"),
+                     quote = '"', sep = "|", skip = 6,
+                     stringsAsFactors = FALSE, strip.white = TRUE,
+                     fill = TRUE)
+footstart <- grep("------", lausUS$LAUSAreaCode)
+lausUS <- lausUS[1:(footstart - 1),]
+```
+
+---
+## Unemployment Map
+
+It may be useful to be able to access the county name and state name
+separately:
+
+```{r}
+lausUS <- separate(lausUS, Title, c("cname", "scode"),
+                   sep = ", ", fill = "right")
+```
+
+--
+
+Check the variable types:
+
+```{r}
+sapply(lausUS, class)
+```
+
+--
+
+The `UnempRate` variable is read as character data because of missing
+value encoding, so needs to be converted to numeric:
+
+```{r}
+lausUS <- mutate(lausUS, UnempRate = as.numeric(UnempRate))
+```
+
+---
+## Unemployment Map
+
+Check for missing values:
+
+```{r}
+select_if(lausUS, anyNA) %>% names()
+```
+
+--
+
+The state code is missing for the District of Columbia:
+
+```{r}
+select(lausUS, cname, scode) %>%
+    filter(is.na(scode)) %>%
+    unique()
+```
+--
+
+<!--
+Missing values for `UnempRate` are all for Puerto Rico and September
+2017. Hurricane Maria made landfall on September 20. -->
+
+March and April 2020 numbers were not available for Puerto Rico:
+
+```{r}
+select(lausUS, scode, Period, UnempRate) %>%
+    filter(is.na(UnempRate)) %>%
+    unique()
+```
+
+---
+## Unemployment Map
+
+To compute the national monthly unemployment rates over this period we
+need some more data cleaning:
+
+```{r}
+lausUS <- mutate(lausUS,
+                 Period = fct_inorder(Period),
+                 LaborForce = as.numeric(gsub(",", "", LaborForce)),
+                 Unemployed = as.numeric(gsub(",", "", Unemployed)))
+```
+
+---
+## Unemployment Map
+
+Unemployment during this period was affected significantly by the
+COVID-19 pandemic.
+
+A plot shows a large spike in April 2020:
+
+.hide-code[
+```{r}
+group_by(lausUS, Period) %>%
+    summarize(Unemployed = sum(Unemployed, na.rm = TRUE),
+              LaborForce = sum(LaborForce, na.rm = TRUE),
+              UnempRate = 100 * (Unemployed / LaborForce)) %>%
+    ggplot(aes(Period, UnempRate, group = 1)) +
+    geom_line()
+```
+]
+
+---
+## Unemployment Map
+
+A choropleth map can be used to look at how the impact was distributed
+across the country.
+
+--
+
+To show unemployment rates on a map we need to merge the unemployment data
+with map data.
+
+--
+
+To match county unemployment data and county shape data it is safer to
+use the numeric [FIPS county
+code](https://en.wikipedia.org/wiki/FIPS_county_code). This can be
+added with
+
+```{r}
+lausUS <- mutate(lausUS, fips = State * 1000 + County)
+```
+--
+
+Shape data for US counties can be obtained from a number of sources in a
+number of different formats.
+
+--
+
+Here is one approach:
+
+```{r}
+counties_sf <- sf::st_as_sf(maps::map("county", plot = FALSE, fill = TRUE))
+county.fips <-
+    mutate(maps::county.fips, polyname = sub(":.*", "", polyname)) %>%
+    unique()
+counties_sf <- left_join(counties_sf, county.fips, c("ID" = "polyname"))
+states_sf <-  sf::st_as_sf(maps::map("state", plot = FALSE, fill = TRUE))
+```
+
+---
+## Unemployment Map
+
+Some summaries over the period can be computed as
+
+```{r}
+summaryUS <- group_by(lausUS, County, State, fips) %>%
+    summarize(avg_unemp = mean(UnempRate, na.rm = TRUE),
+              max_unemp = max(UnempRate, na.rm = TRUE),
+              apr_unemp = UnempRate[Period == "Apr-20"]) %>%
+    ungroup()
+head(summaryUS)
+```
+
+---
+## Unemployment Map
+
+A choropleth map of the April 2020 unemployment rates:
+
+.hide-code[
+```{r, fig.width = 9, fig.height = 6}
+left_join(counties_sf, summaryUS, "fips") %>%
+    ggplot() +
+    geom_sf(aes(fill = apr_unemp)) +
+    scale_fill_viridis(name = "Rate", na.value = "red") +
+    theme_map() +
+    geom_sf(data = states_sf, col = "grey", fill = NA)
+```
+]
+
+---
+## Unemployment Map
+
+Using a very visible color for missing data is useful, at least during
+exploration.
+
+--
+
+`anti_join` can show the county geometry that does not have an entry
+in the unemployment data:
+
+```{r}
+anti_join(counties_sf, summaryUS, "fips")
+```
+
+--
+
+Shannon County, SD (FIPS 46113), was renamed to [Oglala Lakota County](https://en.wikipedia.org/wiki/Oglala_Lakota_County,_South_Dakota) in June 2015 and given a new FIPS code, 46102.
+
+--
+
+The geometry data table needs to be updated:
+
+```{r}
+counties_sf <- mutate(counties_sf, fips = replace(fips, fips == 46113, 46102))
+```
+
+---
+## Unemployment Map
+
+With the updated data the map is now complete:
+
+.hide-code[
+```{r, fig.width = 9, fig.height = 6}
+left_join(counties_sf, summaryUS, "fips") %>%
+    ggplot() +
+    geom_sf(aes(fill = apr_unemp)) +
+    scale_fill_viridis(name = "Rate", na.value = "red") +
+    theme_map() +
+    geom_sf(data = states_sf, col = "grey", fill = NA)
+```
+]
+
+```{r, echo = FALSE, eval = FALSE}
+ggpoly2sf <- function(poly, coords = c("long", "lat"),
+                      id = "group", region = "region", crs = 4326) {
+    sf::st_as_sf(poly, coords = coords, crs = crs) %>%
+    group_by(!! as.name(id), !! as.name(region)) %>%
+    summarize(do_union = FALSE) %>%
+    sf::st_cast("POLYGON") %>%
+    ungroup() %>%
+    group_by(!! as.name(region)) %>%
+    summarize(do_union = FALSE) %>%
+    ungroup()
+}
+m_sf <- ggpoly2sf(socviz::county_map, c("long", "lat"), "group", "id")
+m_sf <- mutate(m_sf, fips = as.numeric(id))
+m_sf <- mutate(m_sf, fips = replace(fips, fips == 46113, 46102))
+ggplot(m_sf) + geom_sf()
+au <- group_by(lausUS, fips) %>% summarize(avg_ur = mean(UnempRate, na.rm = TRUE))
+mu <- group_by(lausUS, fips) %>% summarize(max_ur = max(UnempRate, na.rm = TRUE))
+da <- left_join(m_sf, au, "fips")
+dm <- left_join(m_sf, mu, "fips")
+ggplot(da, aes(fill = avg_ur)) + geom_sf(size = 0.1) + scale_fill_viridis(name = "Rate", na.value = "red")
+ggplot(dm, aes(fill = max_ur)) + geom_sf(size = 0.1) + scale_fill_viridis(name = "Rate", na.value = "red")
+ggplot(left_join(m_sf, filter(lausUS, Period == "Apr-20"), "fips"), aes(fill = UnempRate)) + geom_sf(size = 0.1) + scale_fill_viridis(name = "Rate", na.value = "red")
+```
