--- a/sibs.Rmd
+++ b/sibs.Rmd
@@ -42,7 +42,7 @@ Some tools I will be using:
 * The [`ggplot`](https://ggplot2.tidyverse.org/) package based on
   the _Grammar of Graphics_ framework.
 
-Most of the packages are loaded by loading the `tidyverse` package
+Most of the packages are loaded by loading the `tidyverse` package:
 
 ```{r, message = FALSE}
 library(tidyverse)
@@ -56,6 +56,15 @@ Useful references:
 > Claus O. Wilke (2019), [_Fundamentals of Data
 >  Visualization_](https://serialmentor.com/dataviz/), O'Reilly.
   
+> Kieran Healy (2018) [_Data Visualization: A practical
+> introduction_](http://socviz.co/), Princeton
+
+> Rafael A. Irizarry (2019), [Introduction to Data Science: _Data
+> Analysis and Prediction Algorithms with
+> R_](https://rafalab.github.io/dsbook/), Chapman & Hall/CRC. ([Book
+> source on GitHub](https://github.com/rafalab/dsbook))
+
+
 Ask questions any time!
 
  
@@ -65,6 +74,7 @@ R is a language for data analysis and graphics.
 
 * R was originally developed by Robert Gentleman and Ross Ihaka in the
   early 1990's for a Macintosh computer lab at U. of Auckland, New Zealand.
+
 * R is based on the S language developed by John Chambers and
   others at Bell Labs.
 
@@ -129,7 +139,7 @@ project:
 library(nomnoml)
 ```
 <center>
-```{nomnoml, echo = FALSE}
+```{nomnoml, echo = FALSE, fig.height = 3.5}
 #padding: 25
 #fontsize: 18
 #fill: #E1DAFF; #D4A9FF
@@ -146,14 +156,24 @@ library(nomnoml)
 ```
 </center>
 
-Saving work in a text file or a notebook and tracking changes to
-your files with a version control system like
-[`git`](https://git-scm.com/) will allow you to you or someone else
-reproduce your results.
+These steps are often repeated many times, so it is important to make
+your work reproducible.
 
-Using a system like Rmarkdown to prepare your report avoids the risks
-of cutting and pasting results and allows you to re-create your report
-when data changes (as it often will!)
+
+### Reproducible Data Analysis
+
+Making your work reproducible:
+
+* Save you work in a text file or notebook.
+
+* Track changes to your files with a version control system like
+  [`git`](https://git-scm.com/).
+
+* Use a system like [Rmarkdown](https://rmarkdown.rstudio.com) to
+  prepare your reports.
+
+This allows you to re-create your report when data changes (as it
+often will!).
 
 A good resource for setting up your tools to support this is [_Happy
 Git and GitHub for the useR_](https://happygitwithr.com/).
@@ -186,12 +206,14 @@ head(geyser)
 ```
 
 <div class="alert alert-info"> `head` and `tail` return the first and
-last few rows of a data frame. They are useful for quick sanity
-checks.  </div>
+last few rows of a data frame.
+
+They are useful for quick sanity checks.  </div>
 
 The rows represent measurements recorded for eruptions of the _Old
-Faithful_ geyser in Yellowstone National Park, Wyoming. The variables
-are:
+Faithful_ geyser in Yellowstone National Park, Wyoming.
+
+The variables are:
 
 * `waiting`: the time in minutes since the previous eruption;
 * `duration`: the duration of the eruption.
@@ -275,7 +297,7 @@ sgd <- summarize(group_by(geyser, type),
 (sgd <- mutate(sgd, prop = n / sum(n)))
 ```
 
-This computation can also be written using the _pipe operator_ `%>%`:
+This computation can also be written using the _forward pipe operator_ `%>%`:
 
 ```{r}
 sgd <-
@@ -287,16 +309,22 @@ sgd <-
     mutate(prop = n / sum(n))
 ```
 
+<div class="alert alert-info"> The pipe operator allows a sequence of
+operations to be chained together.
+
+The left-hand operation is passed implicitly as the first argument to
+the function called on the right. </div>
+
 One way to show the superimposed normal densities:
 
 ```{r}
+f1 <- function(x)
+    sgd$prop[1] * dnorm(x, sgd$mean[1], sgd$sd[1])
+f2 <- function(x)
+    sgd$prop[2] * dnorm(x, sgd$mean[2], sgd$sd[2])
 p <- p +
-    stat_function(color = "red",
-                  fun = function(x)
-                          sgd$prop[1] * dnorm(x, sgd$mean[1], sgd$sd[1])) +
-    stat_function(color = "blue",
-                  fun = function(x)
-                          sgd$prop[2] * dnorm(x, sgd$mean[2], sgd$sd[2]))
+    stat_function(color = "red", fun = f1) +
+    stat_function(color = "blue", fun = f2)
 p
 ```
 
@@ -326,15 +354,17 @@ manipulation_.  </div>
 A plot showing curves computed both ways:
 
 ```{r}
+f1_2 <- function(x)
+    sgd2$prop[1] * dnorm(x, sgd2$mean[1], sgd2$sd[1])
+f2_2 <- function(x)
+    sgd2$prop[2] * dnorm(x, sgd2$mean[2], sgd2$sd[2])
 p <- p +
     stat_function(color = "red",
                   linetype = 2,
-                  fun = function(x)
-                          sgd2$prop[1] * dnorm(x, sgd2$mean[1], sgd2$sd[1])) +
+                  fun = f1_2) +
     stat_function(color = "blue",
                   linetype = 2,
-                  fun = function(x)
-                          sgd2$prop[2] * dnorm(x, sgd2$mean[2], sgd2$sd[2]))
+                  fun = f2_2)
 p
 ```
 
