--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -411,19 +411,19 @@ ggplot(geyser) +
 ```
 ]
 --
-.pull-right-foo[
+.pull-right[
 ```{r geyser-hist, eval = FALSE}
 ```
+
+{{content}}
 ]
 --
-.pull-right-foo[
 A basic template for creating a plot with `ggplot`:
 
 ```r
 ggplot(data = <DATA>) +
     <GEOM>(mapping = aes(<MAPPINGS>))
 ```
-]
 
 ---
 ## Old Faithful Eruptions
@@ -446,15 +446,16 @@ ggplot(geyser) +
 ```
 ]
 --
-.pull-right-foo[
+.pull-right[
 ```{r geyser-scatter, eval = FALSE}
 ```
+
+{{content}}
 ]
 --
-.pull-right-foo[
 It looks like a useful rule would be to expect a shorter waiting time
 after a shorter eruption duration.
-]
+
 
 ---
 ## Old Faithful Eruptions
@@ -481,19 +482,20 @@ p
 ```
 ]
 --
-.pull-right-foo[
+.pull-righ[
 ```{r geyser-hist-narrow, eval = FALSE}
 ```
+
+{{content}}
 ]
 --
-.pull-right-foo[
+
 `ggplot` produces a plot object.
-]
+
+{{content}}
 --
-.pull-right-foo[
 Drawing only happens when the object
 is printed.
-]
 
 
 ---
@@ -609,14 +611,15 @@ p
 ```
 ]
 --
-.pull-right-foo[
+.pull-right[
 ```{r geyser-hist-dens, eval = FALSE}
 ```
+
+{{content}}
 ]
 --
-.pull-right-foo[
+
 A `ggplot` can consist of several _layers_.
-]
 
 
 ---
@@ -669,7 +672,7 @@ p
 ```
 ]
 --
-.pull-right-foo[
+.pull-right[
 ```{r geyser-hist-dens-2, eval = FALSE}
 ```
 ]
@@ -733,14 +736,14 @@ ggplot(barley) +
 ```
 ]
 --
-.pull-right-foo[
+.pull-right[
 ```{r barley-color-sym, eval = FALSE}
 ```
+
+{{content}}
 ]
 --
-.pull-right-foo[
 There is a lot of _interference_ between shape and color.
-]
 
 
 ---
@@ -1076,25 +1079,25 @@ The axis and grid are not helpful; a _theme_ adjustment can remove them:
 (pp <- pp + theme_void())
 ```
 ]
-.pull-right-foo[
+.pull-right[
 ```{r eye-pie-2, eval = FALSE}
 ```
+
+{{content}}
 ]
 --
-.pull-right-foo[
 Themes provide a way to customize the non-data components of plots:
 i.e. titles, labels, fonts, background, grid lines, and legends.
-]
+
+{{content}}
 --
-.pull-right-foo[
 Themes can be used to give plots a consistent customized look.
-]
+
+{{content}}
 --
-.pull-right-foo[
 The `ggthemes` package provides a number of themes to emulate the
 style of different publications, for example `theme_wsj` and
 `theme_economist`.
-]
 
 ---
 ## Hair and Eye Color Data
@@ -1112,13 +1115,17 @@ cowplot::plot_grid(pb, pp)
 .pull-right[
 Some questions:
 
+{{content}}
+]
+--
 * Which plot makes it easier to tell whether the proportion of
   brown-eyed students is larger or smaller that the proportion of
   blue-eyed students?
 
+{{content}}
+--
 * Which plot makes it easier to tell whether these proportions are
   larger or smaller than 1/2 or 1/4 or 1/3?
-]
 
 ---
 ## Hair and Eye Color Data
